--- a/src/components/UserGreeting.css
+++ b/src/components/UserGreeting.css
@@ -1,8 +1,17 @@
 .greeting-container {
     display: flex; /* Use flexbox to arrange the elements horizontally */
     align-items: center; /* Align items vertically in the center */
-}
-
-.h1 {
     font-family: "Courier New", Courier, monospace;
 }
+
+.App {
+    position: relative;
+  }
+  
+  .svg-background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  
